--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div>
         <nav class="nav-bar">
                         
-            <a href= "index_pg1.html">Home</a>
+            <a href= "index.html">Home</a>
             <a href= "projects_pg2.html">Projects</a>
             <a href= "blog_pg3.html">Blog</a>
         </nav>
