correction to text

--- a/projects_pg2.html
+++ b/projects_pg2.html
@@ -32,7 +32,7 @@
             The concept was turned into a portrait created by visual artist TextaQueen as part of their solo
             exhibition <a href="https://4a.com.au/exhibitions/textaqueen-bollywouldnt"
                 target="_blank">Bollywouldn't</a>, held at the
-            A4 Centre for Contemporary Asian Art in Sydney, Australia. In the portrait, I'm the head on the left with one of my arms holding up a dustpan and brush. <br>
+            A4 Centre for Contemporary Asian Art in Sydney, Australia. In the portrait, I'm the head on the right with one of my arms holding up a dustpan and brush. <br>
 
             <img src="KKCB.jpeg" alt="Kali Ka Choti Behen colour portrait." class="projects-portrait-image">
         </p>
